[gd_scene load_steps=3 format=3 uid="uid://hg36t717p0sf"]

[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="1_a1qms"]
[ext_resource type="Script" path="res://scripts/AvatarCustomizer.gd" id="1_rsw8p"]

[node name="AvatarCustomizer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a1qms")
script = ExtResource("1_rsw8p")

[node name="AvatarRoot" type="Node2D" parent="."]

[node name="HeadBase" type="Sprite2D" parent="AvatarRoot"]
position = Vector2(500, 280)
scale = Vector2(0.4, 0.4)

[node name="Face" type="Sprite2D" parent="AvatarRoot/HeadBase"]

[node name="Hair" type="Sprite2D" parent="AvatarRoot/HeadBase"]

[node name="Hat" type="Sprite2D" parent="AvatarRoot/HeadBase"]
position = Vector2(0, -350)
scale = Vector2(0.2, 0.2)

[node name="EarAccessories" type="Sprite2D" parent="AvatarRoot/HeadBase"]
position = Vector2(250, 0)
scale = Vector2(0.2, 0.2)

[node name="MouthAccessories" type="Sprite2D" parent="AvatarRoot/HeadBase"]
position = Vector2(-30, 270)
scale = Vector2(0.2, 0.2)

[node name="TorsoBase" type="Sprite2D" parent="AvatarRoot"]
position = Vector2(500, 670)
scale = Vector2(0.75, 0.75)

[node name="Clothing" type="Sprite2D" parent="AvatarRoot/TorsoBase"]

[node name="UIRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UIRoot"]
custom_minimum_size = Vector2(920, 0)
layout_mode = 0
offset_left = 950.0
offset_top = 339.0
offset_right = 1870.0
offset_bottom = 986.0

[node name="CategoriesContainer" type="VBoxContainer" parent="UIRoot/ScrollContainer"]
custom_minimum_size = Vector2(920, 0)
layout_mode = 2

[node name="AllCategory" type="VBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/ScrollContainer/CategoriesContainer/AllCategory"]
layout_mode = 2
text = "All Items"

[node name="ItemScroll" type="ScrollContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/AllCategory"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="ItemList" type="HBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/AllCategory/ItemScroll"]
layout_mode = 2

[node name="FaceCategory" type="VBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/ScrollContainer/CategoriesContainer/FaceCategory"]
layout_mode = 2
text = "Faces"

[node name="ItemScroll" type="ScrollContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/FaceCategory"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="ItemList" type="HBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/FaceCategory/ItemScroll"]
layout_mode = 2

[node name="HairCategory" type="VBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/ScrollContainer/CategoriesContainer/HairCategory"]
layout_mode = 2
text = "Hair"

[node name="ItemScroll" type="ScrollContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/HairCategory"]
custom_minimum_size = Vector2(920, 120)
layout_mode = 2

[node name="ItemList" type="HBoxContainer" parent="UIRoot/ScrollContainer/CategoriesContainer/HairCategory/ItemScroll"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="UIRoot"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 0
offset_left = 1080.0
offset_right = 1260.0
offset_bottom = 60.0
text = "Confirm"

[node name="ClearButton" type="Button" parent="UIRoot"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 0
offset_left = 1080.0
offset_top = 120.0
offset_right = 1260.0
offset_bottom = 180.0
text = "Clear"

[node name="RandomizeButton" type="Button" parent="UIRoot"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 0
offset_left = 1080.0
offset_top = 240.0
offset_right = 1260.0
offset_bottom = 300.0
text = "Randomize"
